# gps-location-server

./: .dockerignore  .env  Cargo.toml  Dockerfile  LICENSE  README.md  build.sh  docker-compose.yml
migrations/2021-07-17-160221_create_geo/: down.sql  up.sql
src/: constants.rs  geo.rs  main.rs  schema.rs  ws.rs
