[package]
name = "geo-location-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = "1.0.106"
serde_json = "1.0.51"
env_logger = "0.9.0"
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "chrono", "uuid"] }
chrono = { version = "0.4.11", features  = ["serde"] }
r2d2 = "0.8.8"
r2d2-diesel = "1.0.0"